Closed Bug 1894363 Opened 2 years ago Closed 2 years ago

Mispositioned buttons on discord chat.

Categories

(Core :: SVG, defect)

defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox127 --- fixed

People

(Reporter: emilio, Assigned: emilio)

Details

Attachments

(4 files)

Attached file Test-case

Seems a bad interaction between abspos and flexbox.

Ah, it's just the flex item with the <svg> not having the right size...

Attached file Reduced test-case.

More of an SVG issue with intrinsic sizes if width and height are auto....

Component: Layout: Flexbox → SVG
Assignee: nobody → emilio
Status: NEW → ASSIGNED
Attached file testcase with <embed>

Per review nit, we may need to fix this for <embed> as well, for consistency (since there are code comments at least that imply <embed> and <svg> both use 0, as noted in phab here).

Here's a testcase that I think exercises the bug with embed, as a modified version of your WPT. I haven't tested your patch on it yet, but this testcase is blank in current Nightly and I suspect it might still be blank with your patch.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/810c65d8b2d3 Make min size of SVG match nsImageFrame. r=dholbert
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/46017 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: