Bug 1894363 - Make min size of SVG match nsImageFrame. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D209062