layout/svg/SVGOuterSVGFrame.cpp
@@ -126,9 +126,9 @@ NS_QUERYFRAME_TAIL_INHERITING(SVGDisplayContainerFrame)
 
 /* virtual */
 nscoord SVGOuterSVGFrame::GetMinISize(gfxContext* aRenderingContext) {
-  // If this ever changes to return something other than zero, then
-  // nsSubDocumentFrame::GetMinISize will also need to change.
-  return 0;
+  auto size = GetIntrinsicSize();
+  const auto& iSize = GetWritingMode().IsVertical() ? size.height : size.width;
+  return iSize.valueOr(0);
 }
 
 /* virtual */
